# SQL_lib

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  memdb.cpp  memdb.hpp  parser.hpp  tests.cpp
lib/parsing/: conditions.hpp  parser.hpp
lib/test_uploads/: file.txt  file1.txt
